docs/tests/typing/bad/testfile-arith-3.cpp

int main() { char *p; p+p; }
